# Esql.c

./: .gitignore  .parser.h.swp  .storagemanager.cpp.swo  CMakeLists.txt  README.md  a.out  analyzer.cpp  analyzer.h  buffer_pool.cpp  buffer_pool.h  common_types.h  core.REMOVED.git-id  database.cpp  database.h  database.h.pch.REMOVED.git-id  database_file.cpp  database_file.h  database_format.h  database_schema.cpp  database_schema.h  datetime.h  deadlock_detector.cpp  deadlock_detector.h  diskstorage.cpp  diskstorage.h  e_sql  e_sql.REMOVED.git-id  executionengine.cpp  executionengine.h  executionplan.cpp  executionplan.h  extras.cpp  file_crawler-1.0.0  files-to-delete.txt  files-to-remove.txt  fractal_bplus_tree.cpp  fractal_bplus_tree.h  locking_policy.cpp  locking_policy.h  main.cpp  (+21 more)
..bfg-report/2026-01-16/04-27-42/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2026-01-16/04-27-42/protected-dirt/: b76a6b0b-HEAD.csv
..bfg-report/2026-01-28/04-55-45/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
ai/embeddings/: mini_bert.cpp  mini_bert.h
ai/models/: lightgbm_model.h
ai/models/model_executables/: lightgbm_model.cpp
databases/: default_WAL.wal  mydbdefault.esqldb  mydbmeta.esqlregistry  mydbtest_db.esqldb  mydbtest_dbs.esqldb  test_db_WAL.wal  test_db_WAL.wal.REMOVED.git-id  test_dbs_WAL.wal  test_dbs_WAL.wal.REMOVED.git-id  test_dbs_wal.wal
include/: .shell_types.h.swp  ai_analyzer.h  ai_execution_engine.h  ai_execution_engine_final.h  ai_expression_evaluator.h  ai_grammer.h  ai_parser.h  analyzer.h  animator.h  autosuggestion_manager.h  common_types.h  completion_engine.h  data_analysis.h  data_extractor.h  database.h  database_file.h  database_schema.h  datetime.h  datum.h  diskstorage.h  fractal_bplus_tree.h  history_manager.h  line_renderer.h  modern_shell.h  parse_error.h  parser.h  scanner.h  shell.h  shell2.h  shell_types.h  syntax_highlighter.h  terminal_input.h  token_utils.h  uuid.h  write_ahead_log.h
include/ai/: algorithm_registry.h  anomaly_detection.h  forecast_engine.h  hyperparameter_tuning.h  lightgbm_model.h  market_simulator.h  model_interface.h  model_registry.h  schema_discovery.h  time_series_preprocessor.h
include/execution_engine_includes/: executionengine_main.h  structs.h
include/plotter_includes/: implotter.h  plotter.h  real_time_plotter_parser.h  realtime_candlestick_plotter.h  realtime_plotter.h
include/shell_includes/: color_mapper.h  gradient.h  help_system.h  keyword_groups.h  modern_shell.h  phoenix_animator.h  shell_types.h  spell_checker.h  syntax_highlighter.h  theme_commands.h  theme_highlighter.h  theme_system.h  utf8_processor.h
src/: .analyzer.cpp.swp  .data_analysis.cpp.swp  .shell.cpp.swp  .shell2.cpp.swp  ai_analyzer.cpp  ai_execution_engine.cpp  ai_execution_engine_final.cpp  ai_grammer.cpp  ai_parser.cpp  analyzer.cpp  animator.cpp  autosuggestion_manager.cpp  buffer_pool.cpp  completion_engine.cpp  data_analysis.cpp  data_extractor.cpp  database.cpp  database_file.cpp  diskstorage.cpp  executionengine.cpp  fractal_bplus_tree.cpp  hisory_manager.cpp  line_renderer.cpp  modern_shell.cpp  parser.cpp  phoenix_animator.cpp  phoenix_ascii.txt  scanner.cpp  shell.cpp  shell2.cpp  syntax_highlighter.cpp  terminal_input.cpp  token_utils.cpp  utf8_processor.cpp  write_ahead_log.cpp
src/ai_executables/: algorithm_registry.cpp  lightgbm_model.cpp  model_registry.cpp  schema_discovery.cpp
src/ai_executables/lightgbm/: anomaly_detection.cpp  autoencoder_anomaly_detector.cpp  cluster.cpp  drift_detector.cpp  feature_descriptor.cpp  forecast.cpp  forecast_engine.cpp  lightgbm_model.cpp  local_outlier_factor_detector.cpp  market_simulator.cpp  model_helpers.cpp  model_schema.cpp  probability_destribution.cpp  simulate.cpp  time_series_anomaly_detector.cpp  time_series_preprocessor.cpp  training_metrics.cpp
src/ai_executionengine/ai_executionengine_base/: ai_execution_engine_core.cpp  ai_execution_engine_utils.cpp  execute_predict.cpp  execute_train.cpp  model_analysis.cpp  model_management.cpp
src/ai_executionengine/ai_executionengine_final/: ai_execution_engine_final_main.cpp  ai_execution_engine_final_models.cpp  ai_execution_engine_final_timeseries.cpp  ai_expression_evaluator.cpp  ai_final_utils.cpp  data_processing.cpp  execute_ai_sql.cpp  execute_analyze.cpp  execute_anomaly_detection.cpp  execute_batch_ai.cpp  execute_createpipeline.cpp  execute_forecast.cpp  execute_simulate.cpp  hyperparameter_tuner.cpp  hyperparameter_tuning.cpp  hyperparameters.cpp
src/execution_engine/: .execute_plotter.cpp.swp  constraint_validation.cpp  execute_analytical.cpp  execute_database_operations.cpp  execute_delete.cpp  execute_insert.cpp  execute_plotter.cpp  execute_realtme_plotter.cpp  execute_select.cpp  execute_table_operations.cpp  execute_update.cpp  executionengine_base.cpp  expression_evaluation.cpp  helper_methods.cpp  pattern_matching.cpp
src/plotter/: .plotter.cpp.swp  animation.cpp  area.cpp  bar.cpp  boxplot.cpp  colors.cpp  contour.cpp  correlation.cpp  dashboard.cpp  data_utils.cpp  distribution.cpp  geo_bubble.cpp  geo_choropleth.cpp  geo_contour.cpp  geo_flow.cpp  geo_grid.cpp  geo_heatmap.cpp  geo_line.cpp  geo_polygon.cpp  geo_scatter.cpp  geo_utilities.cpp  heatmap.cpp  histogram.cpp  histogram2d.cpp  implot_plotter.cpp  interactive.cpp  line.cpp  math_utils.cpp  multi_line.cpp  parseFromMap.cpp  pie.cpp  plot_geo_map.cpp  plot_utils.cpp  plotter.cpp  plotter_base.cpp  qqplot.cpp  realtime_candlestick_plotter.cpp  realtime_plotter.cpp  scatter.cpp  stacked_bar.cpp  (+6 more)
src/python/: train_model.py
src/shell_executables/: animator.cpp  autosuggestion_manager.cpp  color_mapper.cpp  completion_engine.cpp  gradient.cpp  help_system.cpp  hisory_manager.cpp  keyword_groups.cpp  line_renderer.cpp  modern_shell.cpp  phoenix_animator.cpp  spell_checker.cpp  syntax_highlighter.cpp  terminal_input.cpp  theme_commands.cpp  theme_highlighter.cpp  theme_system.cpp  utf8_processor.cpp
